Redirect everyone using the old links to the live wiki.

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -34,3 +34,10 @@
     </ul>
     <hr/>
 </div>
+
+<script>
+window.addEventListener('load', (event) => {
+  window.location = "https://learn.ubiquityrobotics.com";
+});
+    
+</script>
